--- a/client/src/pages/AIPage.css
+++ b/client/src/pages/AIPage.css
@@ -1,3 +1,17 @@
+body::-webkit-scrollbar,html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body,html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+html{
+  overflow-y: hidden;
+}
+
+
 .ai-page-background {
   position: fixed;
   top: 0;
